# softwrd_data_scraping

./: README.md  pyproject.toml  requirements.txt
dags/: database.py  scrape_bikroy_dag.py  scrape_data_from_bikroy.py  scrape_data_from_scrapethissite.py  scrape_this_site_dag.py
