[tool.poetry]
name = "softwrd-data-scraping"
version = "0.1.0"
description = ""
authors = ["morshed-sarwer <morshedsarwer@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
pymongo = "^4.6.2"
requests = "^2.31.0"
selenium = "^4.18.1"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
